--- a/config/long-term-storage-repocfg.yaml
+++ b/config/long-term-storage-repocfg.yaml
@@ -1097,6 +1097,16 @@ repo:
         src: go-packages/meep-users
         # supports linting
         lint: true
+      meep-vis-client:
+        # location of source code
+        src: go-packages/meep-vis-client
+        # supports linting
+        lint: false
+      meep-vis-traffic-mgr:
+        # location of source code
+        src: go-packages/meep-vis-traffic-mgr
+        # supports linting
+        lint: true
       meep-wais-client:
         # location of source code
         src: go-packages/meep-wais-client
