chart env var fixes

--- a/charts/meep-virt-engine/values.yaml
+++ b/charts/meep-virt-engine/values.yaml
@@ -31,10 +31,10 @@ image:
   env:
     # Provide comma-separated list of pods to create in sandbox
     MEEP_SANDBOX_PODS: ""
-    MEEP_HOST_URL: "http://www.example.com"
-    MEEP_USER_SWAGGER: "false"
-    MEEP_HTTPS_ONLY: "false"
-    MEEP_AUTH_ENABLED: "\"false\""
+    MEEP_HOST_URL: http://www.example.com
+    MEEP_USER_SWAGGER: false
+    MEEP_HTTPS_ONLY: false
+    MEEP_AUTH_ENABLED: false
   envSecret:
 
 service:
