--- a/charts/meep-webhook/templates/deployment.yaml
+++ b/charts/meep-webhook/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
             name: {{ .Values.configMap }}
       initContainers:
         - name: init-{{ .Values.deployment.dependency.redis }}
-          image: busybox
+          image: busybox:1.28
           imagePullPolicy: IfNotPresent
           command: ['sh', '-c', 'until nslookup {{ .Values.deployment.dependency.redis }} ; do echo waiting for {{ .Values.deployment.dependency.redis }}; sleep 0.25; done;']
         - name: init-{{ .Values.deployment.dependency.coredns }}
